--- a/scss/sections/_map.scss
+++ b/scss/sections/_map.scss
@@ -3,5 +3,10 @@
 
 
 .map-container{
-    padding-top: 2rem;
+    padding-top: 4rem;
+
+    #mapid {
+        width: 100%;
+        height: 40rem;
+    }
 }
