--- a/scss/sections/_szlaki.scss
+++ b/scss/sections/_szlaki.scss
@@ -1,7 +1,7 @@
 @use '../custom'as *;
 @use '../components/mixins'as *;
 
-.portfolio {
+.szlaki {
     padding: 4rem 0;
 
 
@@ -17,14 +17,14 @@
     height: 18.5rem;
     overflow: hidden;
     margin-bottom: 1.2rem;
-    border-top: 0.5rem solid $purple-light;
+    border-top: 0.5rem solid $gray-900;
 
-    img{
+    img {
         width: 100%;
         height: 100%;
     }
 
-    .portfolio-info{
+    .portfolio-info {
         background-color: rgba($primary, 0.75);
         width: 100%;
         height: 100%;
@@ -44,13 +44,15 @@
             }
         }
     }
+
     &:hover {
 
         img {
             transform: scale(1.5);
             @include transitionProperty
         }
-        .portfolio-info{
+
+        .portfolio-info {
             opacity: 1;
             visibility: visible;
             @include transitionProperty
