--- a/scss/sections/_szlaki.scss
+++ b/scss/sections/_szlaki.scss
@@ -3,12 +3,10 @@
 
 .szlaki {
     padding: 4rem 0;
+}
 
-
-    button {
-        text-transform: capitalize;
-    }
-
+.opis{
+    padding-bottom: 4rem;
 }
 
 .portfolio-box {
