--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10775,6 +10775,39 @@ textarea.form-control-lg {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
+.underline {
+  position: relative;
+  padding: 1rem;
+  text-decoration: none;
+  color: #aaa;
+  font-weight: 800;
+  text-transform: uppercase;
+  margin: 0 10px;
+}
+.underline:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 0%;
+  content: ".";
+  color: transparent;
+  background: #aaa;
+  height: 1px;
+}
+.underline:hover:after {
+  width: 100%;
+}
+
+ul {
+  list-style: none;
+  text-align: center;
+}
+ul li {
+  display: inline-block;
+}
+
 .display-2 {
   margin-bottom: 1rem;
   text-transform: capitalize;
@@ -10847,7 +10880,7 @@ textarea.form-control-lg {
 }
 
 .map-container {
-  padding-top: 4rem;
+  padding-top: 1rem;
 }
 .map-container #mapid {
   width: 100%;
@@ -10855,7 +10888,7 @@ textarea.form-control-lg {
 }
 
 .button_group {
-  padding: 4rem;
+  padding: 2rem;
 }
 .button_group button {
   margin: 0.25rem;
