--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,6 @@
 
 // IMPORT COMPONENTS
 
-@use 'components/animations';
 @use 'components/buttons';
 @use 'components/mixins';
 @use 'components/typography';
@@ -14,4 +13,4 @@
 @use 'sections/intro-section';
 @use 'sections/navbar';
 @use 'sections/szlaki';
-@use 'sections/services';
+@use 'sections/info';
