--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10800,7 +10800,7 @@ ul li {
 
 .display-2 {
   margin-bottom: 1rem;
-  text-transform: capitalize;
+  text-transform: none;
   font-family: "Poppins", sans-serif;
 }
 .display-2--intro {
@@ -11003,6 +11003,10 @@ ul li {
 .intros img {
   width: 100%;
   height: 100%;
+}
+
+span {
+  text-transform: none;
 }
 
 .menu {
