--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -2,7 +2,7 @@
 
 .display-2{
     margin-bottom: 1rem;
-    text-transform: capitalize;
+    text-transform: none;
     font-family: 'Poppins', sans-serif;
 
     &--intro{
